# crewailabs

./: .gitignore  README.md  main.py
src/: lab.py  llm_style_console.py
src/crew/comunidade/: README.md  pyproject.toml  report.md
src/crew/comunidade/src/comunidade/: crew.py  main.py
