[project]
name = "comunidade"
version = "0.1.0"
description = "comunidade using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.85.0,<1.0.0"
]

[project.scripts]
comunidade = "comunidade.main:run"
run_crew = "comunidade.main:run"
train = "comunidade.main:train"
replay = "comunidade.main:replay"
test = "comunidade.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
